Adding files with docker config

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -158,6 +158,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HEAD is now at 716836a Updating gitignore'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repo.git.reset('--hard')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'diff --git a/data_preprocess.py b/data_preprocess.py\\nindex 5d1dcc1..99c3638 100644\\n--- a/data_preprocess.py\\n+++ b/data_preprocess.py\\n@@ -2,24 +2,33 @@ import numpy as np\\n import pandas as pd\\n import logging\\n import traceback\\n-import warnings\\n-from collections import Counter\\n+from git import Repo\\n \\n if __name__ == \\'__main__\\':\\n \\n+    repo_path = r\"/Users/davidlaredorazo/Documents/Projects/Rappi Challenge/ml_training\"\\n+\\n     #Configure logger\\n     data_logger = logging.getLogger(\\'data_logger\\')\\n     data_logger.setLevel(logging.INFO)\\n-    data_fh = logging.FileHandler(\\'data.log\\')\\n+    data_fh = logging.FileHandler(\\'./data.log\\')\\n     data_formatter = logging.Formatter(fmt=\\'%(levelname)s:%(threadName)s:%(asctime)s:%(filename)s:%(funcName)s:%(message)s\\',\\n                                     datefmt=\\'%m/%d/%Y %H:%M:%S\\')\\n     data_fh.setFormatter(data_formatter)\\n     data_logger.addHandler(data_fh)\\n \\n+    #Try to open repository\\n     try:\\n+        repo = Repo(repo_path)\\n+    except Exception as e:\\n+        data_logger.error(\\'Could not open repository\\')\\n+        data_logger.error(traceback.format_exc())\\n+        print(\\'Could not open repository. Please check log\\')\\n \\n-        #Process data according to solution\\n-        training = pd.read_csv(\"data_raw/train.csv\")\\n+    #Pre-process data according to solution\\n+    try:\\n+\\n+        training = pd.read_csv(\"./data_raw/train.csv\")\\n         training = training.drop([\\'PassengerId\\',\\'Name\\',\\'Ticket\\',\\'Cabin\\'], axis=1)\\n \\n         #Fill missing values\\n@@ -35,10 +44,32 @@ if __name__ == \\'__main__\\':\\n         training = training.drop([\\'Embarked\\', \\'Sex\\', \\'Pclass\\'], axis=1)\\n         titanic = training.join([embark_dummies_titanic, sex_dummies_titanic, pclass_dummies_titanic])\\n \\n-        titanic.to_csv(\\'data/train.csv\\')\\n+        data_logger.info(\\'Successfully pre processed data\\')\\n+        print(\"Successfully pre processed data\")\\n \\n     except Exception as e:\\n \\n         print(\"Error while processing data. Please check log\")\\n         data_logger.error(\"Error while processing data\")\\n-        data_logger.error(traceback.format_exc())\\n\\\\ No newline at end of file\\n+        data_logger.error(traceback.format_exc())\\n+        exit()\\n+\\n+\\n+    #Upload to git\\n+    try:\\n+\\n+        titanic.to_csv(\\'./data/train.csv\\')\\n+        print(repo.git.add(\\'./data/train.csv\\'))\\n+        repo.index.commit(\\'Adding pre-processed data\\')\\n+        origin = repo.remote(name=\\'ml_training\\')\\n+        origin.push()\\n+        data_logger.info(\\'Data uploaded to git\\')\\n+        print(\\'Data uploaded to git\\')\\n+\\n+    except Exception as e:\\n+        #Need to reset git to previous state\\n+        repo.git.reset(\\'--hard\\')\\n+        data_logger.error(\\'Could not update git repository\\')\\n+        data_logger.error(traceback.format_exc())\\n+        print(\\'Could not update git repository. Please check log\\')\\n+        exit()\\n\\\\ No newline at end of file\\ndiff --git a/train_model.py b/train_model.py\\nindex 3cb7b41..94287bd 100644\\n--- a/train_model.py\\n+++ b/train_model.py\\n@@ -43,7 +43,7 @@ if __name__ == \\'__main__\\':\\n \\n     #Open config file\\n     try:\\n-        with open(\\'config.json\\') as fp:\\n+        with open(\\'./config.json\\') as fp:\\n             data = json.load(fp)\\n     except Exception as e:\\n         training_logger.error(\\'Could not open config file\\')'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = repo.head.commit.tree\n",
+    "repo.git.diff(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
